--- a/experimental/whitebird/index.html
+++ b/experimental/whitebird/index.html
@@ -231,59 +231,184 @@
             <div class="col-md-1">
 
                 <div class="row">
-                    <div class="col-md-1">
-                        <div class="form-group">
-                            <select id="note1">
+                    <div class="col-md-1 note-selector">
+                        <select id="note1">
                                 <option value="svg">1C</option>
                                 <option value="dxf">3F#</option>
                             </select>
-                        </div>
                     </div>
                 </div>
 
                 <div class="row">
-                    <div class="col-md-1">
-                        <div class="form-group">
-                            <select id="note2">
+                    <div class="col-md-1 note-selector">
+                        <select id="note2">
                                 <option value="svg">1C</option>
                                 <option value="dxf">3F#</option>
                             </select>
-                        </div>
                     </div>
                 </div>
 
                 <div class="row">
-                    <div class="col-md-1">
-                        <div class="form-group">
-                            <select id="note3">
+                    <div class="col-md-1 note-selector">
+                        <select id="note3">
                                 <option value="svg">1C</option>
                                 <option value="dxf">3F#</option>
                             </select>
-                        </div>
                     </div>
                 </div>
 
                 <div class="row">
-                    <div class="col-md-1">
-                        <div class="form-group">
-                            <select id="note4">
+                    <div class="col-md-1 note-selector">
+                        <select id="note4">
                                 <option value="svg">1C</option>
                                 <option value="dxf">3F#</option>
                             </select>
-                        </div>
                     </div>
                 </div>
 
                 <div class="row">
-                    <div class="col-md-1">
-                        <div class="form-group">
-                            <select id="note5">
+                    <div class="col-md-1 note-selector">
+                        <select id="note5">
                                 <option value="svg">1C</option>
                                 <option value="dxf">3F#</option>
                             </select>
-                        </div>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-md-1 note-selector">
+                        <select id="note6">
+                                <option value="svg">1C</option>
+                                <option value="dxf">3F#</option>
+                            </select>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-1 note-selector">
+                        <select id="note7">
+                                <option value="svg">1C</option>
+                                <option value="dxf">3F#</option>
+                            </select>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-1 note-selector">
+                        <select id="note8">
+                                <option value="svg">1C</option>
+                                <option value="dxf">3F#</option>
+                            </select>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-1 note-selector">
+                        <select id="note9">
+                                <option value="svg">1C</option>
+                                <option value="dxf">3F#</option>
+                            </select>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-1 note-selector">
+                        <select id="note10">
+                                <option value="svg">1C</option>
+                                <option value="dxf">3F#</option>
+                            </select>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-1 note-selector">
+                        <select id="note11">
+                                <option value="svg">1C</option>
+                                <option value="dxf">3F#</option>
+                            </select>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-1 note-selector">
+                        <select id="note12">
+                                <option value="svg">1C</option>
+                                <option value="dxf">3F#</option>
+                            </select>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-1 note-selector">
+                        <select id="note13">
+                                <option value="svg">1C</option>
+                                <option value="dxf">3F#</option>
+                            </select>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-1 note-selector">
+                        <select id="note14">
+                                <option value="svg">1C</option>
+                                <option value="dxf">3F#</option>
+                            </select>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-1 note-selector">
+                        <select id="note15">
+                                <option value="svg">1C</option>
+                                <option value="dxf">3F#</option>
+                            </select>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-1 note-selector">
+                        <select id="note16">
+                                <option value="svg">1C</option>
+                                <option value="dxf">3F#</option>
+                            </select>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-1 note-selector">
+                        <select id="note17">
+                                <option value="svg">1C</option>
+                                <option value="dxf">3F#</option>
+                            </select>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-1 note-selector">
+                        <select id="note18">
+                                <option value="svg">1C</option>
+                                <option value="dxf">3F#</option>
+                            </select>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-1 note-selector">
+                        <select id="note19">
+                                <option value="svg">1C</option>
+                                <option value="dxf">3F#</option>
+                            </select>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-1 note-selector">
+                        <select id="note20">
+                                <option value="svg">1C</option>
+                                <option value="dxf">3F#</option>
+                            </select>
+                    </div>
+                </div>
+
 
             </div>
             <div class="col-md-11">
