better implementation of midi to tone convert

--- a/experimental/whitebird/index.html
+++ b/experimental/whitebird/index.html
@@ -232,179 +232,140 @@
 
                 <div class="row">
                     <div class="col-md-1 note-selector">
-                        <select id="note1">
-                                <option value="svg">1C</option>
-                                <option value="dxf">3F#</option>
+                        <select class="note" id="note1">
                             </select>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col-md-1 note-selector">
-                        <select id="note2">
-                                <option value="svg">1C</option>
-                                <option value="dxf">3F#</option>
+                        <select class="note" id="note2">
                             </select>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col-md-1 note-selector">
-                        <select id="note3">
-                                <option value="svg">1C</option>
-                                <option value="dxf">3F#</option>
+                        <select class="note" id="note3">
                             </select>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col-md-1 note-selector">
-                        <select id="note4">
-                                <option value="svg">1C</option>
-                                <option value="dxf">3F#</option>
+                        <select class="note" id="note4">
                             </select>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col-md-1 note-selector">
-                        <select id="note5">
-                                <option value="svg">1C</option>
-                                <option value="dxf">3F#</option>
+                        <select class="note" id="note5">
                             </select>
                     </div>
                 </div>
                 <div class="row">
                     <div class="col-md-1 note-selector">
-                        <select id="note6">
-                                <option value="svg">1C</option>
-                                <option value="dxf">3F#</option>
+                        <select class="note" id="note6">
                             </select>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col-md-1 note-selector">
-                        <select id="note7">
-                                <option value="svg">1C</option>
-                                <option value="dxf">3F#</option>
+                        <select class="note" id="note7">
                             </select>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col-md-1 note-selector">
-                        <select id="note8">
-                                <option value="svg">1C</option>
-                                <option value="dxf">3F#</option>
+                        <select class="note" id="note8">
+    
                             </select>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col-md-1 note-selector">
-                        <select id="note9">
-                                <option value="svg">1C</option>
-                                <option value="dxf">3F#</option>
+                        <select class="note" id="note9">
                             </select>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col-md-1 note-selector">
-                        <select id="note10">
-                                <option value="svg">1C</option>
-                                <option value="dxf">3F#</option>
+                        <select class="note" id="note10">
                             </select>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col-md-1 note-selector">
-                        <select id="note11">
-                                <option value="svg">1C</option>
-                                <option value="dxf">3F#</option>
+                        <select class="note" id="note11">
                             </select>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col-md-1 note-selector">
-                        <select id="note12">
-                                <option value="svg">1C</option>
-                                <option value="dxf">3F#</option>
+                        <select class="note" id="note12">
                             </select>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col-md-1 note-selector">
-                        <select id="note13">
-                                <option value="svg">1C</option>
-                                <option value="dxf">3F#</option>
+                        <select class="note" id="note13">
                             </select>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col-md-1 note-selector">
-                        <select id="note14">
-                                <option value="svg">1C</option>
-                                <option value="dxf">3F#</option>
+                        <select class="note" id="note14">
                             </select>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col-md-1 note-selector">
-                        <select id="note15">
-                                <option value="svg">1C</option>
-                                <option value="dxf">3F#</option>
+                        <select class="note" id="note15">
                             </select>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col-md-1 note-selector">
-                        <select id="note16">
-                                <option value="svg">1C</option>
-                                <option value="dxf">3F#</option>
+                        <select class="note" id="note16">
                             </select>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col-md-1 note-selector">
-                        <select id="note17">
-                                <option value="svg">1C</option>
-                                <option value="dxf">3F#</option>
+                        <select class="note" id="note17">
                             </select>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col-md-1 note-selector">
-                        <select id="note18">
-                                <option value="svg">1C</option>
-                                <option value="dxf">3F#</option>
+                        <select class="note" id="note18">
                             </select>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col-md-1 note-selector">
-                        <select id="note19">
-                                <option value="svg">1C</option>
-                                <option value="dxf">3F#</option>
+                        <select class="note" id="note19">
                             </select>
                     </div>
                 </div>
 
                 <div class="row">
                     <div class="col-md-1 note-selector">
-                        <select id="note20">
-                                <option value="svg">1C</option>
-                                <option value="dxf">3F#</option>
+                        <select class="note" id="note20">
                             </select>
                     </div>
                 </div>
