--- a/experimental/whitebird/index.html
+++ b/experimental/whitebird/index.html
@@ -400,7 +400,7 @@
             </div>
 
             <div class="col-md-4 text-center">
-                <button type="button" id="download-btn" class="btn btn-primary" disabled>Download Laser Cutter plans</button>
+                <button type="button" id="download-btn" class="btn btn-primary">Download Laser Cutter plans</button>
             </div>
         </div>
 
@@ -467,6 +467,7 @@
     <script src="Tone.min.js"></script>
     <script src="snap.svg-min.js"></script>
     <script src="snap.svg.zpd.js"></script>
+    <script src="FileSaver.min.js"></script>
     <script src="user-interface.js"></script>
 </body>
 
