value added to support inches

--- a/experimental/whitebird/index.html
+++ b/experimental/whitebird/index.html
@@ -68,8 +68,8 @@
                 <div class="form-group">
                     <label for="units">Units</label>
                     <select id="units" class="selectpicker form-control">
-                        <option>Millimeters</option>
-                        <option>Inches</option>
+                        <option value="mm">Millimeters</option>
+                        <option value="in">Inches</option>
                     </select>
                 </div>
 
