migrate to maker.js

--- a/experimental/whitebird/index.html
+++ b/experimental/whitebird/index.html
@@ -372,8 +372,7 @@
 
 
             </div>
-            <div class="col-md-11">
-                <svg id="preview" width="600mm" height="300mm" version="1.1" xmlns="http://www.w3.org/2000/svg"></svg>
+            <div id="preview-wrapper" class="col-md-11">
             </div>
         </div>
 
@@ -463,10 +462,9 @@
 
     <!-- Bootstrap select -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.2/js/bootstrap-select.min.js"></script>
+    <script src="browser.maker.js" type="text/javascript"></script>
     <script src="MidiConvert.js"></script>
     <script src="Tone.min.js"></script>
-    <script src="snap.svg-min.js"></script>
-    <script src="snap.svg.zpd.js"></script>
     <script src="FileSaver.min.js"></script>
     <script src="user-interface.js"></script>
 </body>
